Package_Tools/include-C/libxml2/libxml/in_arbeit/fertig/tree.h

#define __XML_TREE_H__
typedef xmlOutputBuffer *xmlOutputBufferPtr;
typedef xmlBuffer *xmlBufferPtr;
/**
 * xmlBufPtr:
 *
 * A pointer to a buffer structure, the actual structure internals are not
 * public
 */

typedef xmlBuf *xmlBufPtr;
/**
 * XML_XML_NAMESPACE:
 *
 * This is the namespace for the special xml: prefix predefined in the
 * XML Namespace specification.
 */
#define XML_XML_NAMESPACE \
    (const xmlChar *) "http://www.w3.org/XML/1998/namespace"
/**
 * XML_XML_ID:
 *
 * This is the name for the special xml:id attribute
 */
#define XML_XML_ID (const xmlChar *) "xml:id"
/*
 * The different element types carried by an XML tree.
 *
 * NOTE: This is synchronized with DOM Level1 values
 *       See http://www.w3.org/TR/REC-DOM-Level-1/
 *
 * Actually this had diverged a bit, and now XML_DOCUMENT_TYPE_NODE should
 * be deprecated to use an XML_DTD_NODE.
 */
typedef enum {
    XML_ELEMENT_NODE=		1,
    XML_ATTRIBUTE_NODE=		2,
    XML_TEXT_NODE=		3,
    XML_CDATA_SECTION_NODE=	4,
    XML_ENTITY_REF_NODE=	5,
    XML_ENTITY_NODE=		6,
    XML_PI_NODE=		7,
    XML_COMMENT_NODE=		8,
    XML_DOCUMENT_NODE=		9,
    XML_DOCUMENT_TYPE_NODE=	10,
    XML_DOCUMENT_FRAG_NODE=	11,
    XML_NOTATION_NODE=		12,
    XML_HTML_DOCUMENT_NODE=	13,
    XML_DTD_NODE=		14,
    XML_ELEMENT_DECL=		15,
    XML_ATTRIBUTE_DECL=		16,
    XML_ENTITY_DECL=		17,
    XML_NAMESPACE_DECL=		18,
    XML_XINCLUDE_START=		19,
    XML_XINCLUDE_END=		20
#ifdef LIBXML_DOCB_ENABLED
   ,XML_DOCB_DOCUMENT_NODE=	21
#endif
} xmlElementType;
typedef xmlNs *xmlNsPtr;
typedef xmlAttr *xmlAttrPtr;
/**
 * xmlNode:
 *
 * A node in an XML tree.
 */
typedef struct _xmlNode xmlNode;
typedef xmlNode *xmlNodePtr;
/**
 * XML_GET_CONTENT:
 *
 * Macro to extract the content pointer of a node.
 */
#define XML_GET_CONTENT(n)					\
    ((n)->type == XML_ELEMENT_NODE ? NULL : (n)->content)
/**
 * XML_GET_LINE:
 *
 * Macro to extract the line number of an element node.
 */
#define XML_GET_LINE(n)						\
    (xmlGetLineNo(n))
/**
 * xmlDoc:
 *
 * An XML document.
 */
typedef struct _xmlDoc xmlDoc;
typedef xmlDoc *xmlDocPtr;
typedef xmlDOMWrapCtxt *xmlDOMWrapCtxtPtr;
/*
 * Navigating.
 */
extern long 
		xmlGetLineNo		(const xmlNode *node);
extern void 
		xmlSetNs		(xmlNodePtr node,
					 xmlNsPtr ns);
extern xmlNsPtr 
		xmlCopyNamespace	(xmlNsPtr cur);
extern xmlNsPtr 
		xmlCopyNamespaceList	(xmlNsPtr cur);
/*
 * Changing the content.
 */
//#if defined(LIBXML_TREE_ENABLED) || defined(LIBXML_XINCLUDE_ENABLED) || \
//    defined(LIBXML_SCHEMAS_ENABLED) || defined(LIBXML_HTML_ENABLED)
extern xmlAttrPtr 
		xmlSetProp		(xmlNodePtr node,
					 const xmlChar *name,
					 const xmlChar *value);
extern xmlAttrPtr 
		xmlSetNsProp		(xmlNodePtr node,
					 xmlNsPtr ns,
					 const xmlChar *name,
					 const xmlChar *value);
extern xmlChar * 
		xmlGetNoNsProp		(const xmlNode *node,
					 const xmlChar *name);
extern xmlChar * 
		xmlGetProp		(const xmlNode *node,
					 const xmlChar *name);
extern xmlAttrPtr 
		xmlHasProp		(const xmlNode *node,
					 const xmlChar *name);
extern xmlAttrPtr 
		xmlHasNsProp		(const xmlNode *node,
					 const xmlChar *name,
					 const xmlChar *nameSpace);
extern xmlChar * 
		xmlGetNsProp		(const xmlNode *node,
					 const xmlChar *name,
					 const xmlChar *nameSpace);
extern xmlNodePtr 
		xmlStringGetNodeList	(const xmlDoc *doc,
					 const xmlChar *value);
extern xmlNodePtr 
		xmlStringLenGetNodeList	(const xmlDoc *doc,
					 const xmlChar *value,
					 int len);
extern xmlChar * 
		xmlNodeListGetString	(xmlDocPtr doc,
					 const xmlNode *list,
					 int inLine);
extern xmlChar * 
		xmlNodeListGetRawString	(const xmlDoc *doc,
					 const xmlNode *list,
					 int inLine);
extern void 
		xmlNodeSetContent	(xmlNodePtr cur,
					 const xmlChar *content);
extern void 
		xmlNodeSetContentLen	(xmlNodePtr cur,
					 const xmlChar *content,
					 int len);
extern void 
		xmlNodeAddContent	(xmlNodePtr cur,
					 const xmlChar *content);
extern void 
		xmlNodeAddContentLen	(xmlNodePtr cur,
					 const xmlChar *content,
					 int len);
extern xmlChar * 
		xmlNodeGetContent	(const xmlNode *cur);
extern int 
		xmlNodeBufGetContent	(xmlBufferPtr buffer,
					 const xmlNode *cur);
extern int 
		xmlBufGetNodeContent	(xmlBufPtr buf,
					 const xmlNode *cur);
extern xmlChar * 
		xmlNodeGetLang		(const xmlNode *cur);
extern int 
		xmlNodeGetSpacePreserve	(const xmlNode *cur);
extern void 
		xmlNodeSetLang		(xmlNodePtr cur,
					 const xmlChar *lang);
extern void 
		xmlNodeSetSpacePreserve (xmlNodePtr cur,
					 int val);
extern xmlChar * 
		xmlNodeGetBase		(const xmlDoc *doc,
					 const xmlNode *cur);
extern void 
		xmlNodeSetBase		(xmlNodePtr cur,
					 const xmlChar *uri);
/*
 * Removing content.
 */
extern int 
		xmlRemoveProp		(xmlAttrPtr cur);
extern int 
		xmlUnsetNsProp		(xmlNodePtr node,
					 xmlNsPtr ns,
					 const xmlChar *name);
extern int 
		xmlUnsetProp		(xmlNodePtr node,
					 const xmlChar *name);
/*
 * Internal, don't use.
 */
extern void 
		xmlBufferWriteCHAR	(xmlBufferPtr buf,
					 const xmlChar *string);
extern void 
		xmlBufferWriteChar	(xmlBufferPtr buf,
					 const char *string);
extern void 
		xmlBufferWriteQuotedString(xmlBufferPtr buf,
					 const xmlChar *string);
extern void xmlAttrSerializeTxtContent(xmlBufferPtr buf,
					 xmlDocPtr doc,
					 xmlAttrPtr attr,
					 const xmlChar *string);
/*
 * Namespace handling.
 */
extern int 
		xmlReconciliateNs	(xmlDocPtr doc,
					 xmlNodePtr tree);
/*
 * Saving.
 */
extern void 
		xmlDocDumpFormatMemory	(xmlDocPtr cur,
					 xmlChar **mem,
					 int *size,
					 int format);
extern void 
		xmlDocDumpMemory	(xmlDocPtr cur,
					 xmlChar **mem,
					 int *size);
extern void 
		xmlDocDumpMemoryEnc	(xmlDocPtr out_doc,
					 xmlChar **doc_txt_ptr,
					 int * doc_txt_len,
					 const char *txt_encoding);
extern void 
		xmlDocDumpFormatMemoryEnc(xmlDocPtr out_doc,
					 xmlChar **doc_txt_ptr,
					 int * doc_txt_len,
					 const char *txt_encoding,
					 int format);
extern int 
		xmlDocFormatDump	(FILE *f,
					 xmlDocPtr cur,
					 int format);
extern int 
		xmlDocDump		(FILE *f,
					 xmlDocPtr cur);
extern void 
		xmlElemDump		(FILE *f,
					 xmlDocPtr doc,
					 xmlNodePtr cur);
extern int 
		xmlSaveFile		(const char *filename,
					 xmlDocPtr cur);
extern int 
		xmlSaveFormatFile	(const char *filename,
					 xmlDocPtr cur,
					 int format);
extern size_t 
		xmlBufNodeDump		(xmlBufPtr buf,
					 xmlDocPtr doc,
					 xmlNodePtr cur,
					 int level,
					 int format);
extern int 
		xmlNodeDump		(xmlBufferPtr buf,
					 xmlDocPtr doc,
					 xmlNodePtr cur,
					 int level,
					 int format);
extern int 
		xmlSaveFileTo		(xmlOutputBufferPtr buf,
					 xmlDocPtr cur,
					 const char *encoding);
extern int 
		xmlSaveFormatFileTo     (xmlOutputBufferPtr buf,
					 xmlDocPtr cur,
				         const char *encoding,
				         int format);
extern void 
		xmlNodeDumpOutput	(xmlOutputBufferPtr buf,
					 xmlDocPtr doc,
					 xmlNodePtr cur,
					 int level,
					 int format,
					 const char *encoding);
extern int 
		xmlSaveFormatFileEnc    (const char *filename,
					 xmlDocPtr cur,
					 const char *encoding,
					 int format);
extern int 
		xmlSaveFileEnc		(const char *filename,
					 xmlDocPtr cur,
					 const char *encoding);
/*
 * XHTML
 */
extern int 
		xmlIsXHTML		(const xmlChar *systemID,
					 const xmlChar *publicID);
/*
 * Compression.
 */
extern int 
		xmlGetDocCompressMode	(const xmlDoc *doc);
extern void 
		xmlSetDocCompressMode	(xmlDocPtr doc,
					 int mode);
extern int 
		xmlGetCompressMode	(void);
extern void 
		xmlSetCompressMode	(int mode);
/*
* DOM-wrapper helper functions.
*/
extern xmlDOMWrapCtxtPtr 
		xmlDOMWrapNewCtxt	(void);
extern void 
		xmlDOMWrapFreeCtxt	(xmlDOMWrapCtxtPtr ctxt);
extern int 
	    xmlDOMWrapReconcileNamespaces(xmlDOMWrapCtxtPtr ctxt,
					 xmlNodePtr elem,
					 int options);
extern int 
	    xmlDOMWrapAdoptNode		(xmlDOMWrapCtxtPtr ctxt,
					 xmlDocPtr sourceDoc,
					 xmlNodePtr node,
					 xmlDocPtr destDoc,
					 xmlNodePtr destParent,
					 int options);
extern int 
	    xmlDOMWrapRemoveNode	(xmlDOMWrapCtxtPtr ctxt,
					 xmlDocPtr doc,
					 xmlNodePtr node,
					 int options);
extern int 
	    xmlDOMWrapCloneNode		(xmlDOMWrapCtxtPtr ctxt,
					 xmlDocPtr sourceDoc,
					 xmlNodePtr node,
					 xmlNodePtr *clonedNode,
					 xmlDocPtr destDoc,
					 xmlNodePtr destParent,
					 int deep,
					 int options);
/*
 * 5 interfaces from DOM ElementTraversal, but different in entities
 * traversal.
 */
extern unsigned long 
            xmlChildElementCount        (xmlNodePtr parent);
extern xmlNodePtr 
            xmlNextElementSibling       (xmlNodePtr node);
extern xmlNodePtr 
            xmlFirstElementChild        (xmlNodePtr parent);
extern xmlNodePtr 
            xmlLastElementChild         (xmlNodePtr parent);
extern xmlNodePtr 
            xmlPreviousElementSibling   (xmlNodePtr node);