Package_Tools/include-C/libxml2/libxml/in_arbeit/fertig/tree.pp


procedure xmlSetNs(node:TxmlNodePtr; ns:TxmlNsPtr);cdecl;external;
function xmlCopyNamespace(cur:TxmlNsPtr):TxmlNsPtr;cdecl;external;
function xmlCopyNamespaceList(cur:TxmlNsPtr):TxmlNsPtr;cdecl;external;
{
 * Changing the content.
  }
{#if defined(LIBXML_TREE_ENABLED) || defined(LIBXML_XINCLUDE_ENABLED) || \ }
{    defined(LIBXML_SCHEMAS_ENABLED) || defined(LIBXML_HTML_ENABLED) }
(* Const before type ignored *)
(* Const before type ignored *)
function xmlSetProp(node:TxmlNodePtr; name:PxmlChar; value:PxmlChar):TxmlAttrPtr;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function xmlSetNsProp(node:TxmlNodePtr; ns:TxmlNsPtr; name:PxmlChar; value:PxmlChar):TxmlAttrPtr;cdecl;external;
{$endif}
{ defined(LIBXML_TREE_ENABLED) || defined(LIBXML_XINCLUDE_ENABLED) || \
	  defined(LIBXML_SCHEMAS_ENABLED) || defined(LIBXML_HTML_ENABLED)  }
(* Const before type ignored *)
(* Const before type ignored *)

function xmlGetNoNsProp(node:PxmlNode; name:PxmlChar):PxmlChar;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function xmlGetProp(node:PxmlNode; name:PxmlChar):PxmlChar;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function xmlHasProp(node:PxmlNode; name:PxmlChar):TxmlAttrPtr;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function xmlHasNsProp(node:PxmlNode; name:PxmlChar; nameSpace:PxmlChar):TxmlAttrPtr;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function xmlGetNsProp(node:PxmlNode; name:PxmlChar; nameSpace:PxmlChar):PxmlChar;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function xmlStringGetNodeList(doc:PxmlDoc; value:PxmlChar):TxmlNodePtr;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function xmlStringLenGetNodeList(doc:PxmlDoc; value:PxmlChar; len:longint):TxmlNodePtr;cdecl;external;
(* Const before type ignored *)
function xmlNodeListGetString(doc:TxmlDocPtr; list:PxmlNode; inLine:longint):PxmlChar;cdecl;external;
{$ifdef LIBXML_TREE_ENABLED}
(* Const before type ignored *)
(* Const before type ignored *)
function xmlNodeListGetRawString(doc:PxmlDoc; list:PxmlNode; inLine:longint):PxmlChar;cdecl;external;
{$endif}
{ LIBXML_TREE_ENABLED  }
(* Const before type ignored *)

procedure xmlNodeSetContent(cur:TxmlNodePtr; content:PxmlChar);cdecl;external;
{$ifdef LIBXML_TREE_ENABLED}
(* Const before type ignored *)
procedure xmlNodeSetContentLen(cur:TxmlNodePtr; content:PxmlChar; len:longint);cdecl;external;
{$endif}
{ LIBXML_TREE_ENABLED  }
(* Const before type ignored *)

procedure xmlNodeAddContent(cur:TxmlNodePtr; content:PxmlChar);cdecl;external;
(* Const before type ignored *)
procedure xmlNodeAddContentLen(cur:TxmlNodePtr; content:PxmlChar; len:longint);cdecl;external;
(* Const before type ignored *)
function xmlNodeGetContent(cur:PxmlNode):PxmlChar;cdecl;external;
(* Const before type ignored *)
function xmlNodeBufGetContent(buffer:TxmlBufferPtr; cur:PxmlNode):longint;cdecl;external;
(* Const before type ignored *)
function xmlBufGetNodeContent(buf:TxmlBufPtr; cur:PxmlNode):longint;cdecl;external;
(* Const before type ignored *)
function xmlNodeGetLang(cur:PxmlNode):PxmlChar;cdecl;external;
(* Const before type ignored *)
function xmlNodeGetSpacePreserve(cur:PxmlNode):longint;cdecl;external;
{$ifdef LIBXML_TREE_ENABLED}
(* Const before type ignored *)
procedure xmlNodeSetLang(cur:TxmlNodePtr; lang:PxmlChar);cdecl;external;
procedure xmlNodeSetSpacePreserve(cur:TxmlNodePtr; val:longint);cdecl;external;
{$endif}
{ LIBXML_TREE_ENABLED  }
(* Const before type ignored *)
(* Const before type ignored *)

function xmlNodeGetBase(doc:PxmlDoc; cur:PxmlNode):PxmlChar;cdecl;external;
{$if defined(LIBXML_TREE_ENABLED) || defined(LIBXML_XINCLUDE_ENABLED)}
(* Const before type ignored *)

procedure xmlNodeSetBase(cur:TxmlNodePtr; uri:PxmlChar);cdecl;external;
{$endif}
{
 * Removing content.
  }

function xmlRemoveProp(cur:TxmlAttrPtr):longint;cdecl;external;
{$if defined(LIBXML_TREE_ENABLED) || defined(LIBXML_SCHEMAS_ENABLED)}
(* Const before type ignored *)

function xmlUnsetNsProp(node:TxmlNodePtr; ns:TxmlNsPtr; name:PxmlChar):longint;cdecl;external;
(* Const before type ignored *)
function xmlUnsetProp(node:TxmlNodePtr; name:PxmlChar):longint;cdecl;external;
{$endif}
{ defined(LIBXML_TREE_ENABLED) || defined(LIBXML_SCHEMAS_ENABLED)  }
{
 * Internal, don't use.
  }
(* Const before type ignored *)

procedure xmlBufferWriteCHAR(buf:TxmlBufferPtr; _string:PxmlChar);cdecl;external;
(* Const before type ignored *)
procedure xmlBufferWriteChar(buf:TxmlBufferPtr; _string:Pchar);cdecl;external;
(* Const before type ignored *)
procedure xmlBufferWriteQuotedString(buf:TxmlBufferPtr; _string:PxmlChar);cdecl;external;
{$ifdef LIBXML_OUTPUT_ENABLED}
(* Const before type ignored *)
procedure xmlAttrSerializeTxtContent(buf:TxmlBufferPtr; doc:TxmlDocPtr; attr:TxmlAttrPtr; _string:PxmlChar);cdecl;external;
{$endif}
{ LIBXML_OUTPUT_ENABLED  }
{$ifdef LIBXML_TREE_ENABLED}
{
 * Namespace handling.
  }

function xmlReconciliateNs(doc:TxmlDocPtr; tree:TxmlNodePtr):longint;cdecl;external;
{$endif}
{$ifdef LIBXML_OUTPUT_ENABLED}
{
 * Saving.
  }

procedure xmlDocDumpFormatMemory(cur:TxmlDocPtr; mem:PPxmlChar; size:Plongint; format:longint);cdecl;external;
procedure xmlDocDumpMemory(cur:TxmlDocPtr; mem:PPxmlChar; size:Plongint);cdecl;external;
(* Const before type ignored *)
procedure xmlDocDumpMemoryEnc(out_doc:TxmlDocPtr; doc_txt_ptr:PPxmlChar; doc_txt_len:Plongint; txt_encoding:Pchar);cdecl;external;
(* Const before type ignored *)
procedure xmlDocDumpFormatMemoryEnc(out_doc:TxmlDocPtr; doc_txt_ptr:PPxmlChar; doc_txt_len:Plongint; txt_encoding:Pchar; format:longint);cdecl;external;
function xmlDocFormatDump(f:PFILE; cur:TxmlDocPtr; format:longint):longint;cdecl;external;
function xmlDocDump(f:PFILE; cur:TxmlDocPtr):longint;cdecl;external;
procedure xmlElemDump(f:PFILE; doc:TxmlDocPtr; cur:TxmlNodePtr);cdecl;external;
(* Const before type ignored *)
function xmlSaveFile(filename:Pchar; cur:TxmlDocPtr):longint;cdecl;external;
(* Const before type ignored *)
function xmlSaveFormatFile(filename:Pchar; cur:TxmlDocPtr; format:longint):longint;cdecl;external;
function xmlBufNodeDump(buf:TxmlBufPtr; doc:TxmlDocPtr; cur:TxmlNodePtr; level:longint; format:longint):Tsize_t;cdecl;external;
function xmlNodeDump(buf:TxmlBufferPtr; doc:TxmlDocPtr; cur:TxmlNodePtr; level:longint; format:longint):longint;cdecl;external;
(* Const before type ignored *)
function xmlSaveFileTo(buf:TxmlOutputBufferPtr; cur:TxmlDocPtr; encoding:Pchar):longint;cdecl;external;
(* Const before type ignored *)
function xmlSaveFormatFileTo(buf:TxmlOutputBufferPtr; cur:TxmlDocPtr; encoding:Pchar; format:longint):longint;cdecl;external;
(* Const before type ignored *)
procedure xmlNodeDumpOutput(buf:TxmlOutputBufferPtr; doc:TxmlDocPtr; cur:TxmlNodePtr; level:longint; format:longint; 
            encoding:Pchar);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function xmlSaveFormatFileEnc(filename:Pchar; cur:TxmlDocPtr; encoding:Pchar; format:longint):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function xmlSaveFileEnc(filename:Pchar; cur:TxmlDocPtr; encoding:Pchar):longint;cdecl;external;
{$endif}
{ LIBXML_OUTPUT_ENABLED  }
{
 * XHTML
  }
(* Const before type ignored *)
(* Const before type ignored *)

function xmlIsXHTML(systemID:PxmlChar; publicID:PxmlChar):longint;cdecl;external;
{
 * Compression.
  }
(* Const before type ignored *)
function xmlGetDocCompressMode(doc:PxmlDoc):longint;cdecl;external;
procedure xmlSetDocCompressMode(doc:TxmlDocPtr; mode:longint);cdecl;external;
function xmlGetCompressMode:longint;cdecl;external;
procedure xmlSetCompressMode(mode:longint);cdecl;external;
{
* DOM-wrapper helper functions.
 }
function xmlDOMWrapNewCtxt:TxmlDOMWrapCtxtPtr;cdecl;external;
procedure xmlDOMWrapFreeCtxt(ctxt:TxmlDOMWrapCtxtPtr);cdecl;external;
function xmlDOMWrapReconcileNamespaces(ctxt:TxmlDOMWrapCtxtPtr; elem:TxmlNodePtr; options:longint):longint;cdecl;external;
function xmlDOMWrapAdoptNode(ctxt:TxmlDOMWrapCtxtPtr; sourceDoc:TxmlDocPtr; node:TxmlNodePtr; destDoc:TxmlDocPtr; destParent:TxmlNodePtr; 
           options:longint):longint;cdecl;external;
function xmlDOMWrapRemoveNode(ctxt:TxmlDOMWrapCtxtPtr; doc:TxmlDocPtr; node:TxmlNodePtr; options:longint):longint;cdecl;external;
function xmlDOMWrapCloneNode(ctxt:TxmlDOMWrapCtxtPtr; sourceDoc:TxmlDocPtr; node:TxmlNodePtr; clonedNode:PxmlNodePtr; destDoc:TxmlDocPtr; 
           destParent:TxmlNodePtr; deep:longint; options:longint):longint;cdecl;external;
{$ifdef LIBXML_TREE_ENABLED}
{
 * 5 interfaces from DOM ElementTraversal, but different in entities
 * traversal.
  }
function xmlChildElementCount(parent:TxmlNodePtr):dword;cdecl;external;
function xmlNextElementSibling(node:TxmlNodePtr):TxmlNodePtr;cdecl;external;
function xmlFirstElementChild(parent:TxmlNodePtr):TxmlNodePtr;cdecl;external;
function xmlLastElementChild(parent:TxmlNodePtr):TxmlNodePtr;cdecl;external;
function xmlPreviousElementSibling(node:TxmlNodePtr):TxmlNodePtr;cdecl;external;
{$endif}
{ C++ end of extern C conditionnal removed }
{$ifndef __XML_PARSER_H__}
{$include <libxml/xmlmemory.h>}
{$endif}
{$endif}
{ __XML_TREE_H__  }

implementation

{ was #define dname def_expr }
function XML_XML_NAMESPACE : PxmlChar;
  begin
    XML_XML_NAMESPACE:=PxmlChar('http://www.w3.org/XML/1998/namespace');
  end;

{ was #define dname def_expr }
function XML_XML_ID : PxmlChar;
  begin
    XML_XML_ID:=PxmlChar('xml:id');
  end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function XML_GET_CONTENT(n : longint) : longint;
var
   if_local1 : longint;
(* result types are not known *)
begin
  if XML_ELEMENT_NODE then
    if_local1:=NULL
  else
    if_local1:=n^.content;
  XML_GET_CONTENT:=(n^._type)=(if_local1);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function XML_GET_LINE(n : longint) : longint;
begin
  XML_GET_LINE:=xmlGetLineNo(n);
end;


end.
